# CodePulse

./: .gitignore  README.md  docker-compose.yml  implementation_plan.md  walkthrough.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ArchitectureSection.jsx  ContactModal.jsx  ContactSection.jsx  DocsOverviewSection.jsx  FeaturesSection.jsx  Footer.jsx  Navbar.jsx  Sidebar.jsx  StatCard.jsx
frontend/src/components/ui/: AuthButton.jsx  BackgroundRippleEffect.jsx  BentoGrid.jsx  Button.jsx  GooeyNav.css  GooeyNav.jsx  MagicRings.css  MagicRings.jsx  NoiseBackground.jsx  ShinyText.css  TextHoverEffect.jsx
frontend/src/pages/: AuthCallback.jsx  Dashboard.jsx  DocsDetail.jsx  Landing.jsx
frontend/src/utils/: cn.js
k8s/: README.md  kafka-broker.yaml
k8s/api-gateway/: deployment.yaml  service.yaml
k8s/worker/: deployment.yaml  scaledobject.yaml
services/api-gateway/: Dockerfile  README.md  pyproject.toml
services/api-gateway/migrations/: env.py
services/api-gateway/migrations/versions/: 01d33c47ef46_create_users_table.py  65cdea513344_add_projects_table.py  abfd8aef5921_add_scan_reports_table.py
services/api-gateway/src/: main.py
services/api-gateway/src/core/: config.py  database.py  dependencies.py  kafka.py  security.py
services/worker/: pyproject.toml
services/worker-service/: Dockerfile  README.md  pyproject.toml
services/worker-service/src/: __init__.py  config.py  database.py  main.py  models.py  scanner.py
(+9 files in other folders)
